# pyarchinit-mini

./: .adarte_secrets.sh.example  .env.development  .gitignore  .pre-commit-config.yaml  .railwayignore  .readthedocs.yaml  API_USAGE_GUIDE.md  BLENDER_MCP_SETUP.md  BUGFIX_WEB_INTERFACE.md  CHANGELOG.md  CHANGELOG.md.bak3  CHATGPT_MCP_SETUP.md  CLAUDE_DESKTOP_AUTO_SETUP.md  CLAUDE_DESKTOP_MCP_SETUP.md  CLAUDE_DESKTOP_USAGE.md  COMPLETE_REPORT.md  CRUD_TOOLS.md  DATABASE_EXAMPLE_GUIDE.md  DATABASE_MIGRATION_FIXES.md  DATABASE_UPLOAD_REPORT.md  EXCEL_IMPORT_OPTIMIZATION.md  FIXES_SUMMARY.md  GRAPHML_PERIODO_FASE_SUMMARY.md  GRAPHVIZ_INTEGRATION_REPORT.md  IMPLEMENTATION_PLAN.md  INTERFACES.md  INVENTARIO_FORM_COMPLETION_REPORT.md  LOGIN_TEST.md  MCP_SERVER_QUICKSTART.md  MCP_TOOLS_REFERENCE.md  MIGRATION_US_AREA_README.md  Metro_C_-_Amba_Aradam_extended_matrix.dot  Metro_C_-_Amba_Aradam_extended_matrix.graphml  Metro_C_-_Amba_Aradam_extended_matrix_source.dot  Metro_C_-_Amba_Aradam_extended_matrix_tred.dot  PERIODIZATION_COMPLETE_SUMMARY.md  PYPI_QUICKSTART.md  Procfile  QUICKSTART.md  QUICK_START.md  (+134 more)
blender_addon/: pyarchinit_blender_addon.py
blender_addons/: pyarchinit_realtime_streamer.py
cli_interface/: cli_app.py
data/: pyarchinit_mini_sample.db  pyarchinit_tutorial.db
desktop_gui/: excel_import_dialog.py  graphml_export_dialog.py  main_window.py  media_manager_advanced.py  us_dialog_extended.py
docs/: 3D_BUILDER_MCP_BLENDER.md  3D_BUILDER_TECHNICAL_DOCUMENTATION.md  3D_BUILDER_USER_GUIDE.md  3D_VIEWER_GUIDE.md  API_INDEX.md  API_INDEX.rst  API_REFERENCE.md  API_REFERENCE.rst  AUTOMATED_UPDATES_GUIDE.md  AUTOMATIC_IMPORT_AND_BACKUP_GUIDE.md  BLENDER_ADDON_INSTALLATION_QUICKSTART.md  BLENDER_INTEGRATION.md  CLASS_DIAGRAM.md  CLASS_DIAGRAM.rst  CLI_MIGRATE_VOCAB.md  CSRF_FIX.md  DATABASE_MIGRATION.md  DATABASE_MIGRATION_CONFLICTS.md  DATABASE_PATH_CONFIGURATION.md  DESKTOP_GUI_I18N_COMPLETE_SUMMARY.md  DIAGNOSI_RELAZIONI.md  DOCUMENTATION_VERIFICATION.md  DOCUMENTATION_VERIFICATION_SETUP_SUMMARY.md  DOC_FILE_UPLOAD.md  EM_NODE_TYPE_MANAGEMENT.md  EXAMPLES.rst  EXCEL_IMPORT_BUG_FIXES.md  EXCEL_IMPORT_GUIDE.md  EXCEL_IMPORT_INTEGRATION_SUMMARY.md  EXTENDED_MATRIX_EXPORT.md  EXTENDED_MATRIX_FRAMEWORK.md  EXTENDED_MATRIX_IMPLEMENTATION_SUMMARY.md  EXTENDED_MATRIX_IMPORT.md  FILE_BROWSER_FIX.md  FINAL_IMPLEMENTATION_STATUS.md  FIX_GRAPHML_8_PERIODS.md  FIX_RELAZIONI_HARRIS_MATRIX.md  FIX_TYPE_ERROR_HARRIS_MATRIX.md  GRAPHML_DOT_EXPORT_GUIDE.md  GRAPHML_LARGE_GRAPHS_OPTIMIZATION.md  (+187 more)
examples/: __init__.py  graphml_external_usage.py  graphml_swimlane_example.py  interface_demo.py
pyarchinit_mini/: __init__.py
scripts/: README.md  add_tempio_em_nodes.py  build_regression_fixture.py  capture_full_webapp.py  capture_media_viewers.py  capture_missing_pages.py  fix_pyarchinit_ie_sections.py  generate_3d_with_claude.py  migrate_database_schema.py  record_complete_tutorial.py  record_media_viewer_tutorial.py  record_tutorial_final.py  record_tutorial_video.py  record_v1_8_comprehensive_tutorial.py  screenshot_browser.py  (+4 more)
(+482 files in other folders)
